networkpolicy/networkname2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy 
metadata:
  name: allow-traffic-from-database-namespace-to-data-namespace 
  namespace: data
spec:
  podSelector:
    matchLabels:
      app: data-nginx 
  policyTypes:
   - Ingress
  ingress:
    - from:
        - namespaceSelector:
             matchLabels:
                kubernetes.io/metadata.name: database
          podSelector:
            matchLabels:
               app: database-app
      ports:
        - protocol: TCP 
          port: 80
