networkpolicy/networkpolicy1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
  namespace: dev 
spec:
  podSelector: {}
  policyTypes:
   - Ingress
